--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,36 @@
 [submodule "home/.emacs.d/vendor/color-theme-railscasts"]
 	path = home/.emacs.d/vendor/color-theme-railscasts
 	url = git://github.com/olegshaldybin/color-theme-railscasts.git
+[submodule "home/.vim/bundle/vim-rails"]
+	path = home/.vim/bundle/vim-rails
+	url = git://github.com/tpope/vim-rails.git
+[submodule "home/.vim/bundle/vim-cucumber"]
+	path = home/.vim/bundle/vim-cucumber
+	url = git://github.com/tpope/vim-cucumber.git
+[submodule "home/.vim/bundle/vim-vividchalk"]
+	path = home/.vim/bundle/vim-vividchalk
+	url = git://github.com/tpope/vim-vividchalk.git
+[submodule "home/.vim/bundle/vim-haml"]
+	path = home/.vim/bundle/vim-haml
+	url = git://github.com/tpope/vim-haml.git
+[submodule "home/.vim/bundle/vim-endwise"]
+	path = home/.vim/bundle/vim-endwise
+	url = git://github.com/tpope/vim-endwise.git
+[submodule "home/.vim/bundle/vim-surround"]
+	path = home/.vim/bundle/vim-surround
+	url = git://github.com/tpope/vim-surround.git
+[submodule "home/.vim/bundle/vim-unimpaicd"]
+	path = home/.vim/bundle/vim-unimpaicd
+	url = git://github.com/tpope/vim-unimpaired.git
+[submodule "home/.vim/bundle/vim-repeat"]
+	path = home/.vim/bundle/vim-repeat
+	url = git://github.com/tpope/vim-repeat.git
+[submodule "home/.vim/bundle/nerdtree"]
+	path = home/.vim/bundle/nerdtree
+	url = git://github.com/scrooloose/nerdtree.git
+[submodule "home/.vim/bundle/nerdcommenter"]
+	path = home/.vim/bundle/nerdcommenter
+	url = git://github.com/scrooloose/nerdcommenter.git
+[submodule "home/.vim/bundle/vim-unimpaired"]
+	path = home/.vim/bundle/vim-unimpaired
+	url = git://github.com/tpope/vim-unimpaired.git
