--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "home/.vim/bundle/ack.vim"]
 	path = home/.vim/bundle/ack.vim
 	url = git://github.com/mileszs/ack.vim.git
+[submodule "home/.vim/bundle/git.vim"]
+	path = home/.vim/bundle/git.vim
+	url = git://github.com/motemen/git-vim.git
