--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "home/.vim/bundle/vim-slime"]
 	path = home/.vim/bundle/vim-slime
 	url = git://github.com/jpalardy/vim-slime.git
+[submodule "home/.vim/bundle/vim-coffee-script"]
+	path = home/.vim/bundle/vim-coffee-script
+	url = git://github.com/kchmck/vim-coffee-script.git
