--- a/home/.ackrc
+++ b/home/.ackrc
@@ -1,3 +1,8 @@
 
 --type-add=ruby=.haml,.rake,.rsel
+--type-add=js=.coffee
+--type-add=css=.scss
+--ignore-dir=tmp
+--ignore-dir=doc
+--ignore-dir=public/help
 
